--- a/project_dotNet5780_1766_0406/BE/BE.csproj
+++ b/project_dotNet5780_1766_0406/BE/BE.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HostingUnit .cs" />
+    <Compile Include="order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
