Adding declarations to classes and functions in Part B and updating proprties and classes names in Part I according to final version of the project in the moodle

--- a/project_dotNet5780_1766_0406/BE/BE.csproj
+++ b/project_dotNet5780_1766_0406/BE/BE.csproj
@@ -41,13 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BankAccount.cs" />
+    <Compile Include="BankBranch.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="Diary.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="GuestRequest.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="HostingUnit .cs" />
-    <Compile Include="order.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
