--- a/project_dotNet5780_1766_0406/BL/BL.csproj
+++ b/project_dotNet5780_1766_0406/BL/BL.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BL_imp.cs" />
+    <Compile Include="FactoryBL.cs" />
+    <Compile Include="IBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
