--- a/project_dotNet5780_1766_0406/DAL/DAL.csproj
+++ b/project_dotNet5780_1766_0406/DAL/DAL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dal_imp.cs" />
+    <Compile Include="FactoryDAL.cs" />
     <Compile Include="Idal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
