add clonning for all classes

--- a/project_dotNet5780_1766_0406/DAL/DAL.csproj
+++ b/project_dotNet5780_1766_0406/DAL/DAL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cloning.cs" />
     <Compile Include="Dal_imp.cs" />
     <Compile Include="FactoryDAL.cs" />
     <Compile Include="Idal.cs" />
